@@ -10,7 +10,6 @@ include setup.cfg
 include setup.py
 include TODO
 recursive-include data *
-recursive-include doc *
 recursive-include lib *.py
 recursive-include po *
 recursive-include tools *
